Fix flexbox implementation so map link isn't squished

--- a/app/assets/stylesheets/base/_lists.scss
+++ b/app/assets/stylesheets/base/_lists.scss
@@ -48,6 +48,7 @@ dd {
 
     p {
       margin-right: $base-spacing;
+      flex: 1;
     }
   }
 
